avoid capturing instance in cleanup actions